css/main.css
/* 
Project Name: GSS-B Portfolio
Author: George Sydney Selwyn-Brace
*/


*{
	box-sizing: border-box;
  	-webkit-font-smoothing: antialiased;
  	-moz-osx-font-smoothing: grayscale;
}
html{
	background-color: #ECE5DA;
	color: #222222;
}
img{
	width:100%;
	display: block;
}
svg{
	width: 100%;
}
body{
	margin: 60px 30px;
}
a{
	text-decoration: none;
	color: inherit;
  	border-bottom:  solid 1px #FE7232;
  	display: inline-block;
  	line-height: 0.90;
}
p{
	font-family: 'Cormorant Garamond', 'Times New Roman', Times, serif;
	font-weight: normal;
	font-size: 38px;
	line-height: 50px;
	font-variant-ligatures: common-ligatures;
	width: 66.666%;
}
h1,h2{
	font-family: 'Work Sans', 'Helvetica Neue', Helvetica, sans-serif;
	font-weight: normal;
	font-size: 11px;
	letter-spacing: 1.5px;
	line-height: 15px;
	text-transform: uppercase;
	width: 100%;
	margin: 0;
}
#logo{
	fill: #222222;
	width: 160px;
}
.section{
	widows: 100%;
	margin-top: 60px;
	border-top: solid 1px #fff;
	padding-top: 20px;
}
.sans{
	font-family: 'Work Sans', 'Helvetica Neue', Helvetica, sans-serif;
	font-weight: normal;
	font-size: 11px;
	letter-spacing: 1.5px;
	line-height: 15px;
	text-transform: uppercase;

}
.small-image{
	width: 25%;
	margin: 60px 0;
}

@media screen and (min-width: 0px) and (max-width: 720px){

	body{
		margin: 60px 20px;
	}
	#logo{
		width: 130px;
	}
	.section{
		margin-top: 60px;
	}
	.small-image{
		width: 100%;
		margin: 40px 0;
	}
	p{
	font-size: 26px;
	line-height: 35px;
	}


}

@media screen and (min-width: 1440px){

body{
	margin: 120px 90px;
}
#logo{
	width: 200px;
}
p{
	font-size: 60px;
	line-height: 70px;
}
h1,h2{
	font-size: 14px;
	letter-spacing: 2px;
	line-height: 20px;
}
.section{
	margin-top: 120px;
}
.small-image{
	margin: 120px 0;
}
.sans{
	font-size: 14px;
	letter-spacing: 2px;
	line-height: 20px;
}

}

/* Clearfix */

.clearfix:before,
.clearfix:after {
     content: " ";
     display: table;
}
.clearfix:after {
     clear:both;
}

